force-app/main/default/objects/Job_Application__c/fields/Application_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Application_Candidate__c</fullName>
    <description>Application Candidate</description>
    <label>Application Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>