force-app/main/default/objects/Job_Application__c/fields/Application_Position__c.field-meta.xml
<CustomField>
    <fullName>Application_Position__c</fullName>
    <description>Application Candidate</description>
    <label>Application Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>