force-app/main/default/objects/Job_Application__c/fields/Desired_Salary__c.field-meta.xml
<CustomField>
    <fullName>Desired_Salary__c</fullName>
    <description>Desired Salary for this position</description>
    <label>Desired Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>