force-app/main/default/objects/Job_Application__c/fields/Hire_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Hire_Reasoning__c</fullName>
    <description>Reasoning why the candidate should be hired to the target position</description>
    <inlineHelpText>Why should we hire you?</inlineHelpText>
    <label>Hire Reasoning</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>