force-app/main/default/objects/Job_Application__c/fields/HR_Manager_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_s_Phone__c</fullName>
    <description>HR Manager&apos;s Phone</description>
    <formula>BLANKVALUE(Application_Position__r.HR_Manager__r.Phone, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Manager&apos;s Phone</label>
    <type>Text</type>
</CustomField>