force-app/main/default/objects/Job_Application__c/fields/Recovered__c.field-meta.xml
<CustomField>
    <fullName>Recovered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recovered</description>
    <label>Recovered</label>
    <type>Checkbox</type>
</CustomField>