force-app/main/default/objects/Job_Application__c/fields/USA_Visa_Holder__c.field-meta.xml
<CustomField>
    <fullName>USA_Visa_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>USA Visa Holder</description>
    <label>USA Visa Holder</label>
    <type>Checkbox</type>
</CustomField>