force-app/main/default/objects/Job_Application__c/fields/USA_Visa_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>USA_Visa_Valid_From__c</fullName>
    <description>USA Visa Valid From</description>
    <label>USA Visa Valid From</label>
    <type>Date</type>
</CustomField>